# yatiml

./: .coveragerc  .fossa.yml  .gitignore  .readthedocs.yaml  .travis.yml  CHANGELOG.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  NOTICE  README.rst  mypy.ini  pytest.ini  setup.cfg  setup.py  test_pyyaml_versions.sh  test_ruamel_yaml_versions.sh  tox.ini
.github/workflows/: ci.yaml  ci_python3.5.1.yaml  ci_python3.5.yaml  ci_python3.6.1.yaml  ci_python3.6.yaml  ci_python3.7.yaml  ci_python3.8.yaml  ci_python3.9.yaml  tortellini.yaml
docs/: Makefile  advanced_features.rst  api.rst  basic_tutorial.rst  conf.py  development.rst  index.rst  installation.rst  make.bat  problem_solving.rst  recipes.rst  requirements.txt  tutorial.rst  why.rst
docs/examples/: class_hierarchy.py  collaborative_submissions.py  custom_class.py  custom_recognition.py  dashed_keys.py  data_classes.py  default_values.py  dict_of_strings.py  enums.py  (+15 more)
examples/: class_hierarchy.py  custom_class.py  custom_recognition.py  default_values.py  dict_of_strings.py  enums.py  extra_attributes.py  optional_attribute.py  private_attributes.py  saving.py  savorising.py  savorizing.py  sweetening.py  type_error.py  union_dict.py  user_defined_string.py
tests/: conftest.py  test_additional_types.py  test_bool_fix.py  test_builtin_types.py  test_classes.py  test_helpers.py  test_load_dump_functions.py  test_yatiml.py
yatiml/: __init__.py  constructors.py  dumper.py  exceptions.py  helpers.py  introspection.py  irecognizer.py  loader.py  recognizer.py  representers.py  util.py  yatiml.py
