[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test=pytest

[coverage:run]
branch = True
source = yatiml

[tool:pytest]
testpaths = tests
addopts = --flake8 --cov --cov-report xml --cov-report term-missing --cov-report html

[mypy]
python_version = 3.4
disallow_incomplete_defs = True
disallow_untyped_defs = True

[mypy-ruamel.*]
ignore_missing_imports=True

[mypy-pytest.*]
ignore_missing_imports=True

[mypy-tests.*]
disallow_untyped_defs=False
disallow_untyped_calls=False

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
