[metadata]
description-file = README.md

[aliases]
# Define `python setup.py test`
test = pytest

[coverage:run]
branch = True
source = yatiml

[tool:pytest]
testpaths = tests yatiml
addopts = --mypy --flake8 --cov --cov-report xml --cov-report term-missing --cov-report html

[mypy]
python_version = 3.5
disallow_incomplete_defs = True
disallow_untyped_defs = True
warn_return_any = True

[mypy-ruamel.*]
ignore_missing_imports=True

[mypy-pytest.*]
ignore_missing_imports=True

# Define `python setup.py build_sphinx`
[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1
builder = html
